--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 <header>
   <div class="wrap nav">
     <a class="brand" href="#top">
-      <div class="logo" aria-hidden="true"></div>
+      <img src="madrose-logo.png" alt="Madrose Productions logo" style="width:38px;height:38px;border-radius:12px;display:block" />
       <div>
         <b>Madrose Productions</b>
         <small>Films & Documentaries</small>
