--- a/index.html
+++ b/index.html
@@ -178,6 +178,17 @@
 </head>
 
 <body>
+  <div style="
+  width:100%;
+  background:#000;
+  padding:30px 20px;
+  text-align:center;
+  border-bottom:1px solid rgba(255,255,255,0.1);
+">
+    alt="Madrose Productions logo"
+    style="max-width:900px;width:100%;height:auto;display:inline-block"
+  >
+</div>
 <header>
   <div class="wrap nav">
     <a class="brand" href="#top">
