--- a/index.html
+++ b/index.html
@@ -698,6 +698,13 @@
     window.location.href = "mailto:" + EMAIL + "?subject=" + fullSubject + "&body=" + body;
   });
 </script>
-
+<div style="
+  width:100%;
+  background:black;
+  padding:40px 20px;
+  text-align:center;
+">
+  <img src="madrose-logo.png" style="max-width:900px;width:100%;height:auto;">
+</div>
 </body>
 </html>
