--- a/index.html
+++ b/index.html
@@ -181,18 +181,19 @@
   <div style="
   width:100%;
   background:#000;
-  padding:30px 20px;
+  padding:40px 20px;
   text-align:center;
   border-bottom:1px solid rgba(255,255,255,0.1);
 ">
+<img
+ src="madrose-logo.png"
     alt="Madrose Productions logo"
     style="max-width:900px;width:100%;height:auto;display:inline-block"
-  >
+  > 
 </div>
 <header>
   <div class="wrap nav">
     <a class="brand" href="#top">
-      <img src="madrose-logo.png" alt="Madrose Productions logo" style="width:38px;height:38px;border-radius:12px;display:block" />
       <div>
         <b>Madrose Productions</b>
         <small>Films & Documentaries</small>
