--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
 
   // EDIT THIS EMAIL once, and everything updates:
   // Replace "your-email@example.com" inside this variable:
-  const EMAIL = "your-email@example.com";
+  const EMAIL = "madroseproductions@gmail.com";
 
   const emailEl = document.getElementById("contactEmail");
   const emailLink = document.getElementById("emailLink");
