--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
           <div class="mutedBox">
             Replace the email below with your real contact email:
             <div style="height:8px"></div>
-            <code id="contactEmail">your-email@example.com</code>
+            
           </div>
 
           <div style="height:10px"></div>
@@ -593,7 +593,9 @@
             <a class="btn" href="#presskit">Press Kit</a>
           </div>
         </div>
-
+<a id="emailLink">
+  <code id="contactEmail"></code>
+</a>
         <div class="card film">
           <h3>Contact form (free)</h3>
           <p class="desc">
