--- a/index.html
+++ b/index.html
@@ -595,6 +595,7 @@
   <a class="btn primary" id="emailLinkBtn">Email Madrose</a>
   <a class="btn" href="#presskit">Press Kit</a>
 </div>
+        </div>
         <div class="card film">
           <h3>Contact form (free)</h3>
           <p class="desc">
