--- a/index.html
+++ b/index.html
@@ -569,7 +569,79 @@
       </div>
     </div>
   </section>
+<section id="presskit" class="section">
+  <div class="wrap">
+    <h2>Press Kit</h2>
+    <p class="sub">Quick info, logos, and links for press, festivals, and partners.</p>
 
+    <div class="cols">
+      <!-- LEFT: BASICS -->
+      <div class="card film">
+        <h3>Madrose Productions</h3>
+        <p class="desc">
+          Independent films & documentaries produced by <b>Jeremy Bailer</b>.
+        </p>
+
+        <div class="mutedBox">
+          <div class="small">Direct contact</div>
+          <div style="height:8px"></div>
+          <a id="pressEmailLink" style="text-decoration:none; display:block;">
+            <code id="pressEmail"></code>
+          </a>
+        </div>
+
+        <div style="height:12px"></div>
+
+        <div class="mutedBox">
+          <div class="small">Download</div>
+          <div style="height:8px"></div>
+          <a class="btn" href="madrose-logo.png" download>Download Logo (PNG)</a>
+        </div>
+
+        <div style="height:12px"></div>
+
+        <div class="actions">
+          <a class="btn primary" href="#films">Browse Films</a>
+          <a class="btn" href="#watch">Where to Watch</a>
+        </div>
+      </div>
+
+      <!-- RIGHT: QUICK LINKS -->
+      <div class="card film">
+        <h3>Highlights & Links</h3>
+
+        <div class="mutedBox">
+          <div class="small">Trailers</div>
+          <div style="height:8px"></div>
+          <p class="desc" style="margin:0">
+            <b>Angle (2023)</b> — Trailer:
+            <a href="https://www.youtube.com/watch?v=ZcuZefFz1xw" target="_blank" rel="noopener">Watch on YouTube</a>
+          </p>
+        </div>
+
+        <div style="height:12px"></div>
+
+        <div class="mutedBox">
+          <div class="small">Collaborations</div>
+          <div style="height:8px"></div>
+          <p class="desc" style="margin:0">
+            <b>MP Motion Pictures</b> — <b>Clash of Dynasties</b> (docuseries) — Directed by <b>Ben Hatta</b>.
+          </p>
+        </div>
+
+        <div style="height:12px"></div>
+
+        <div class="mutedBox">
+          <div class="small">Notes</div>
+          <div style="height:8px"></div>
+          <p class="desc" style="margin:0">
+            For press inquiries, screeners, licensing, or festival materials, email us and include your outlet/event and deadline.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
   <section id="contact" class="section">
     <div class="wrap">
       <h2>Contact</h2>
