--- a/index.html
+++ b/index.html
@@ -537,7 +537,61 @@
       </div>
     </div>
   </section>
+<section id="presskit" class="section">
+  <div class="wrap">
+    <h2>Press Kit</h2>
+    <p class="sub">One-sheet information for press, festivals, and partners.</p>
 
+    <div class="card film">
+
+      <h3>Madrose Productions</h3>
+
+      <p class="desc">
+        Independent films and documentaries produced by <b>Jeremy Bailer</b>.
+        Madrose Productions develops character-driven stories across documentary,
+        narrative, and docuseries formats.
+      </p>
+
+      <div class="mutedBox">
+        <div class="small">Key Credits</div>
+        <ul>
+          <li><b>Angle</b> (2023) — Documentary</li>
+          <li><b>Team Foxcatcher</b> (2016) — Emmy-nominated Documentary</li>
+          <li><b>Robot &amp; Frank</b> (2012) — Sundance Sloan Prize Winner</li>
+          <li><b>Arcadia</b> (2012) — Berlinale Crystal Bear Winner</li>
+        </ul>
+      </div>
+
+      <div style="height:14px"></div>
+
+      <div class="mutedBox">
+        <div class="small">Collaborations</div>
+        <p class="desc" style="margin:0">
+          <b>MP Motion Pictures</b> — <b>Clash of Dynasties</b> (docuseries)<br>
+          Directed by <b>Ben Hatta</b>
+        </p>
+      </div>
+
+      <div style="height:14px"></div>
+
+      <div class="mutedBox">
+        <div class="small">Contact</div>
+        <div style="height:8px"></div>
+        <a id="pressEmailLink" style="text-decoration:none">
+          <code id="pressEmail"></code>
+        </a>
+      </div>
+
+      <div style="height:14px"></div>
+
+      <div class="actions">
+        <a class="btn primary" href="#films">Browse Films</a>
+        <a class="btn" href="#contact">Contact</a>
+      </div>
+
+    </div>
+  </div>
+</section>
   <section id="contact" class="section">
     <div class="wrap">
       <h2>Contact</h2>
