--- a/index.html
+++ b/index.html
@@ -546,11 +546,21 @@
 
       <h3>Madrose Productions</h3>
 
-      <p class="desc">
-        Independent films and documentaries produced by <b>Jeremy Bailer</b>.
-        Madrose Productions develops character-driven stories across documentary,
-        narrative, and docuseries formats.
-      </p>
+<p class="desc">
+  Independent films and documentaries produced by <b>Jeremy Bailer</b>.
+</p>
+
+<p class="desc">
+  <b>Jeremy Bailer</b> is an award-winning film producer who has been financing and producing independent films for over 15 years.
+  His films have won major honors at the <b>Sundance Film Festival</b> and the <b>Berlin International Film Festival</b>,
+  including <i>Robot &amp; Frank</i> and <i>Arcadia</i>, respectively.
+</p>
+
+<p class="desc">
+  He received an <b>Emmy nomination for Outstanding Historical Documentary</b> for his work on
+  <i>Team Foxcatcher</i> (Netflix) and <i>Angle</i> (Peacock).
+  Prior to his film career, Bailer was a <b>Division I wrestler at the University of Pennsylvania and graduated with a BA in Communications and Economics in 1998</b>.
+</p>
 
       <div class="mutedBox">
         <div class="small">Key Credits</div>
