--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
 <p class="desc">
   He received an <b>Emmy nomination for Outstanding Historical Documentary</b> for his work on
   <i>Team Foxcatcher</i> (Netflix).  Along with <i>Team Foxcatcher</i>, <i>Angle</i> (Peacock) is another documentary film where the sport of wrestling is the backdrop to incedbile human stories and events.
-  Prior to his film career, Bailer was a <b>Division I wrestler at the University of Pennsylvania and graduated with a BA in Communications and Economics in 1998</b>.
+  Prior to his film career, Bailer was a Division I wrestler at the <b>University of Pennsylvania</b> and graduated with a BA in Communications and Economics in 1998.
 </p>
 
       <div class="mutedBox">
