--- a/index.html
+++ b/index.html
@@ -433,28 +433,96 @@
   </section>
 
   <section id="watch" class="section">
-    <div class="wrap">
-      <h2>Where to Watch</h2>
-      <p class="sub">Availability changes by region. Use these links as the “source of truth” for each title.</p>
+  <div class="wrap">
+    <h2>Where to Watch</h2>
+    <p class="sub">
+      Availability varies by region and over time. Use the links below to find the most current options.
+    </p>
 
-      <div class="cols">
-        <div class="card film">
-          <h3>Quick Start</h3>
-          <ul>
-            <li><b>Team Foxcatcher</b> — Netflix link is included above.</li>
-            <li><b>Angle</b> — use JustWatch to confirm your region + platform.</li>
-            <li>For the other titles, link out to a “Where to Watch” page (Moviefone / JustWatch) or your preferred storefronts.</li>
-          </ul>
-          <div class="actions">
-            <a class="btn primary" href="https://www.justwatch.com/" target="_blank" rel="noreferrer">JustWatch</a>
-            <a class="btn" href="https://www.moviefone.com/" target="_blank" rel="noreferrer">Moviefone</a>
-          </div>
+    <div class="grid">
+
+      <!-- ANGLE -->
+      <article class="card film">
+        <h3>Angle <span class="meta">(2023)</span></h3>
+        <p class="desc">Streaming, rental, and purchase options by region.</p>
+        <div class="actions">
+          <a class="btn primary"
+             href="https://www.justwatch.com/us/search?q=Angle%202023%20documentary"
+             target="_blank" rel="noreferrer">
+            Check Streaming Options
+          </a>
         </div>
+      </article>
 
-        
-      </div>
+      <!-- TEAM FOXCATCHER -->
+      <article class="card film">
+        <h3>Team Foxcatcher <span class="meta">(2016)</span></h3>
+        <p class="desc">Currently available exclusively on Netflix.</p>
+        <div class="actions">
+          <a class="btn primary"
+             href="https://www.netflix.com/title/80044093"
+             target="_blank" rel="noreferrer">
+            Watch on Netflix
+          </a>
+        </div>
+      </article>
+
+      <!-- ROBOT & FRANK -->
+      <article class="card film">
+        <h3>Robot &amp; Frank <span class="meta">(2012)</span></h3>
+        <p class="desc">Streaming, rental, and purchase options by region.</p>
+        <div class="actions">
+          <a class="btn primary"
+             href="https://www.justwatch.com/us/search?q=Robot%20and%20Frank"
+             target="_blank" rel="noreferrer">
+            Check Streaming Options
+          </a>
+        </div>
+      </article>
+
+      <!-- ARCADIA -->
+      <article class="card film">
+        <h3>Arcadia <span class="meta">(2012)</span></h3>
+        <p class="desc">Streaming, rental, and purchase options by region.</p>
+        <div class="actions">
+          <a class="btn primary"
+             href="https://www.justwatch.com/us/search?q=Arcadia%202012%20film"
+             target="_blank" rel="noreferrer">
+            Check Streaming Options
+          </a>
+        </div>
+      </article>
+
+      <!-- SOMEONE MARRY BARRY -->
+      <article class="card film">
+        <h3>Someone Marry Barry <span class="meta">(2014)</span></h3>
+        <p class="desc">Streaming, rental, and purchase options by region.</p>
+        <div class="actions">
+          <a class="btn primary"
+             href="https://www.justwatch.com/us/search?q=Someone%20Marry%20Barry"
+             target="_blank" rel="noreferrer">
+            Check Streaming Options
+          </a>
+        </div>
+      </article>
+
+      <!-- THE NEW REPUBLIC -->
+      <article class="card film">
+        <h3>The New Republic <span class="meta">(2011)</span></h3>
+        <p class="desc">
+          Currently not available on major streaming platforms.
+        </p>
+      </article>
+
     </div>
-  </section>
+
+    <div style="height:14px"></div>
+    <div class="mutedBox">
+      For licensing, private screenings, or archival access to unavailable titles,
+      please use the contact form below.
+    </div>
+  </div>
+</section>
 
   <section id="press" class="section">
     <div class="wrap">
