--- a/index.html
+++ b/index.html
@@ -432,36 +432,58 @@
     </div>
   </section>
 
-  <section id="watch" class="section">
+<section id="watch" class="section">
   <div class="wrap">
     <h2>Where to Watch</h2>
     <p class="sub">
-      Availability varies by region and over time. Use the links below to find the most current options.
+      Links below go to the exact title pages or official platform pages (no search pages).
+      Availability can change by region and over time.
     </p>
 
     <div class="grid">
-
       <!-- ANGLE -->
       <article class="card film">
-        <h3>Angle <span class="meta">(2023)</span></h3>
-        <p class="desc">Streaming, rental, and purchase options by region.</p>
+        <div class="filmTop">
+          <div>
+            <h3>Angle <span class="meta">(2023)</span></h3>
+            <div class="meta">Watch options</div>
+          </div>
+        </div>
+        <p class="desc">
+          Replace the placeholder links below with the exact platform URLs when you have them.
+        </p>
         <div class="actions">
-          <a class="btn primary"
-             href="https://www.justwatch.com/us/search?q=Angle%202023%20documentary"
-             target="_blank" rel="noreferrer">
-            Check Streaming Options
+          <a class="btn primary" href="REPLACE_WITH_OFFICIAL_JUSTWATCH_OR_TITLE_PAGE_URL" target="_blank" rel="noreferrer">
+            Where to Watch (Official Listing)
+          </a>
+          <a class="btn" href="REPLACE_WITH_PEACOCK_URL_IF_APPLICABLE" target="_blank" rel="noreferrer">
+            Watch on Peacock
+          </a>
+          <a class="btn" href="REPLACE_WITH_APPLE_TV_URL" target="_blank" rel="noreferrer">
+            Apple TV (Rent/Buy)
+          </a>
+          <a class="btn" href="REPLACE_WITH_AMAZON_URL" target="_blank" rel="noreferrer">
+            Prime Video (Rent/Buy)
           </a>
         </div>
+        <p class="small">
+          Tip: Use the exact title page on each platform (not search results).
+        </p>
       </article>
 
       <!-- TEAM FOXCATCHER -->
       <article class="card film">
-        <h3>Team Foxcatcher <span class="meta">(2016)</span></h3>
-        <p class="desc">Currently available exclusively on Netflix.</p>
+        <div class="filmTop">
+          <div>
+            <h3>Team Foxcatcher <span class="meta">(2016)</span></h3>
+            <div class="meta">Netflix exclusive</div>
+          </div>
+        </div>
+        <p class="desc">
+          Currently available <b>only on Netflix</b>.
+        </p>
         <div class="actions">
-          <a class="btn primary"
-             href="https://www.netflix.com/title/80044093"
-             target="_blank" rel="noreferrer">
+          <a class="btn primary" href="https://www.netflix.com/title/80044093" target="_blank" rel="noreferrer">
             Watch on Netflix
           </a>
         </div>
@@ -469,57 +491,113 @@
 
       <!-- ROBOT & FRANK -->
       <article class="card film">
-        <h3>Robot &amp; Frank <span class="meta">(2012)</span></h3>
-        <p class="desc">Streaming, rental, and purchase options by region.</p>
+        <div class="filmTop">
+          <div>
+            <h3>Robot &amp; Frank <span class="meta">(2012)</span></h3>
+            <div class="meta">Rent / buy / stream varies</div>
+          </div>
+        </div>
+        <p class="desc">
+          Availability changes by region. Use the official listing link, or replace with direct storefront URLs.
+        </p>
         <div class="actions">
-          <a class="btn primary"
-             href="https://www.justwatch.com/us/search?q=Robot%20and%20Frank"
-             target="_blank" rel="noreferrer">
-            Check Streaming Options
+          <a class="btn primary" href="REPLACE_WITH_OFFICIAL_JUSTWATCH_OR_TITLE_PAGE_URL" target="_blank" rel="noreferrer">
+            Where to Watch (Official Listing)
+          </a>
+          <a class="btn" href="REPLACE_WITH_APPLE_TV_URL" target="_blank" rel="noreferrer">
+            Apple TV (Rent/Buy)
+          </a>
+          <a class="btn" href="REPLACE_WITH_AMAZON_URL" target="_blank" rel="noreferrer">
+            Prime Video (Rent/Buy)
+          </a>
+          <a class="btn" href="REPLACE_WITH_GOOGLE_PLAY_URL" target="_blank" rel="noreferrer">
+            Google Play (Rent/Buy)
           </a>
         </div>
       </article>
 
       <!-- ARCADIA -->
       <article class="card film">
-        <h3>Arcadia <span class="meta">(2012)</span></h3>
-        <p class="desc">Streaming, rental, and purchase options by region.</p>
+        <div class="filmTop">
+          <div>
+            <h3>Arcadia <span class="meta">(2012)</span></h3>
+            <div class="meta">Stream / rent / buy varies</div>
+          </div>
+        </div>
+        <p class="desc">
+          Use the official listing link to show only <b>Arcadia (2012)</b> (not search results).
+          Replace optional direct links below if you want.
+        </p>
         <div class="actions">
-          <a class="btn primary"
-             href="https://www.justwatch.com/us/search?q=Arcadia%202012%20film"
-             target="_blank" rel="noreferrer">
-            Check Streaming Options
+          <a class="btn primary" href="REPLACE_WITH_ARCADIA_EXACT_TITLE_LISTING_URL" target="_blank" rel="noreferrer">
+            Where to Watch (Official Listing)
+          </a>
+          <a class="btn" href="REPLACE_WITH_ROKU_CHANNEL_URL_IF_AVAILABLE" target="_blank" rel="noreferrer">
+            The Roku Channel
+          </a>
+          <a class="btn" href="REPLACE_WITH_FREEVEE_OR_AD_SUPPORTED_URL" target="_blank" rel="noreferrer">
+            Watch Free (Ad-Supported)
+          </a>
+          <a class="btn" href="REPLACE_WITH_AMAZON_URL" target="_blank" rel="noreferrer">
+            Prime Video (Rent/Buy)
           </a>
         </div>
+        <p class="small">
+          Important: Do not use JustWatch search links — use the exact Arcadia title page.
+        </p>
       </article>
 
       <!-- SOMEONE MARRY BARRY -->
       <article class="card film">
-        <h3>Someone Marry Barry <span class="meta">(2014)</span></h3>
-        <p class="desc">Streaming, rental, and purchase options by region.</p>
+        <div class="filmTop">
+          <div>
+            <h3>Someone Marry Barry <span class="meta">(2014)</span></h3>
+            <div class="meta">Rent / buy / stream varies</div>
+          </div>
+        </div>
+        <p class="desc">
+          Replace placeholders with the exact title pages on platforms.
+        </p>
         <div class="actions">
-          <a class="btn primary"
-             href="https://www.justwatch.com/us/search?q=Someone%20Marry%20Barry"
-             target="_blank" rel="noreferrer">
-            Check Streaming Options
+          <a class="btn primary" href="REPLACE_WITH_OFFICIAL_JUSTWATCH_OR_TITLE_PAGE_URL" target="_blank" rel="noreferrer">
+            Where to Watch (Official Listing)
+          </a>
+          <a class="btn" href="REPLACE_WITH_APPLE_TV_URL" target="_blank" rel="noreferrer">
+            Apple TV (Rent/Buy)
+          </a>
+          <a class="btn" href="REPLACE_WITH_AMAZON_URL" target="_blank" rel="noreferrer">
+            Prime Video (Rent/Buy)
+          </a>
+          <a class="btn" href="REPLACE_WITH_YOUTUBE_MOVIES_URL" target="_blank" rel="noreferrer">
+            YouTube Movies (Rent/Buy)
           </a>
         </div>
       </article>
 
       <!-- THE NEW REPUBLIC -->
       <article class="card film">
-        <h3>The New Republic <span class="meta">(2011)</span></h3>
+        <div class="filmTop">
+          <div>
+            <h3>The New Republic <span class="meta">(2011)</span></h3>
+            <div class="meta">Availability unclear</div>
+          </div>
+        </div>
         <p class="desc">
-          Currently not available on major streaming platforms.
+          This title may not currently be available on major platforms. If you find a working platform link,
+          replace the button below.
+        </p>
+        <div class="actions">
+          <a class="btn primary" href="REPLACE_WITH_ANY_WORKING_TITLE_PAGE_IF_FOUND" target="_blank" rel="noreferrer">
+            Check Availability
+          </a>
+          <a class="btn" href="#contact">
+            Contact for Screenings
+          </a>
+        </div>
+        <p class="small">
+          If unavailable, you can leave it as “Contact for screenings” only.
         </p>
       </article>
-
-    </div>
-
-    <div style="height:14px"></div>
-    <div class="mutedBox">
-      For licensing, private screenings, or archival access to unavailable titles,
-      please use the contact form below.
     </div>
   </div>
 </section>
