--- a/index.html
+++ b/index.html
@@ -452,23 +452,23 @@
         <p class="desc">
           Replace the placeholder links below with the exact platform URLs when you have them.
         </p>
-        <div class="actions">
-          <a class="btn primary" href="REPLACE_WITH_OFFICIAL_JUSTWATCH_OR_TITLE_PAGE_URL" target="_blank" rel="noreferrer">
-            Where to Watch (Official Listing)
-          </a>
-          <a class="btn" href="REPLACE_WITH_PEACOCK_URL_IF_APPLICABLE" target="_blank" rel="noreferrer">
-            Watch on Peacock
-          </a>
-          <a class="btn" href="REPLACE_WITH_APPLE_TV_URL" target="_blank" rel="noreferrer">
-            Apple TV (Rent/Buy)
-          </a>
-          <a class="btn" href="REPLACE_WITH_AMAZON_URL" target="_blank" rel="noreferrer">
-            Prime Video (Rent/Buy)
-          </a>
+        
+         <div class="actions">
+  <a
+    class="btn primary"
+    href="https://www.peacocktv.com/watch-online/movies/angle/f3e95679-f0eb-3ae9-8462-e2d574773601"
+    target="_blank"
+    rel="noreferrer"
+  >
+    Watch on Peacock
+  </a>
+</div>
+
+<p class="small">
+  Streaming exclusively on Peacock (US).
+</p> 
         </div>
-        <p class="small">
-          Tip: Use the exact title page on each platform (not search results).
-        </p>
+       
       </article>
 
       <!-- TEAM FOXCATCHER -->
