--- a/index.html
+++ b/index.html
@@ -476,16 +476,23 @@
             <div class="meta">Netflix exclusive</div>
           </div>
         </div>
-        <p class="desc">
-          Currently available <b>only on Netflix</b>.
-        </p>
+        
         <div class="actions">
           <a class="btn primary" href="https://www.netflix.com/title/80044093" target="_blank" rel="noreferrer">
-            Watch on Netflix
-          </a>
-        </div>
-      </article>
+    <div class="actions">
+  <a
+    class="btn primary"
+    href="https://www.netflix.com/title/80044093"
+    target="_blank"
+    rel="noreferrer"
+  >
+    Watch on Netflix
+  </a>
+</div>
 
+<p class="small">
+  Streaming exclusively on Netflix.
+</p>
       <!-- ROBOT & FRANK -->
       <article class="card film">
         <div class="filmTop">
