--- a/index.html
+++ b/index.html
@@ -470,29 +470,26 @@
 
       <!-- TEAM FOXCATCHER -->
       <article class="card film">
-        <div class="filmTop">
-          <div>
-            <h3>Team Foxcatcher <span class="meta">(2016)</span></h3>
-            <div class="meta">Netflix exclusive</div>
-          </div>
-        </div>
-        
-        <div class="actions">
-          <a class="btn primary" href="https://www.netflix.com/title/80044093" target="_blank" rel="noreferrer">
-    <div class="actions">
-  <a
-    class="btn primary"
-    href="https://www.netflix.com/title/80044093"
-    target="_blank"
-    rel="noreferrer"
-  >
-    Watch on Netflix
-  </a>
-</div>
+  <div class="filmTop">
+    <div>
+      <h3>Team Foxcatcher <span class="meta">(2016)</span></h3>
+      <div class="meta">Watch options</div>
+    </div>
+  </div>
 
-<p class="small">
-  Streaming exclusively on Netflix.
-</p>
+  <div class="actions">
+    <a
+      class="btn primary"
+      href="https://www.netflix.com/title/80044093"
+      target="_blank"
+      rel="noreferrer"
+    >
+      Watch on Netflix
+    </a>
+  </div>
+
+  <p class="small">Streaming exclusively on Netflix (US).</p>
+</article>
       <!-- ROBOT & FRANK -->
       <article class="card film">
         <div class="filmTop">
