--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
           <a class="btn" href="REPLACE_WITH_APPLE_TV_URL" target="_blank" rel="noreferrer">
             Apple TV (Rent/Buy)
           </a>
-          <a class="btn" href="REPLACE_WITH_AMAZON_URL" target="_blank" rel="noreferrer">
+          <a class="btn" href="https://tv.apple.com/us/movie/robot--frank/umc.cmc.1tj4b4djocc7gco2s1ta2dazj?action=play" target="_blank" rel="noreferrer">
             Prime Video (Rent/Buy)
           </a>
           <a class="btn" href="REPLACE_WITH_GOOGLE_PLAY_URL" target="_blank" rel="noreferrer">
