--- a/index.html
+++ b/index.html
@@ -505,10 +505,10 @@
           <a class="btn primary" href="REPLACE_WITH_OFFICIAL_JUSTWATCH_OR_TITLE_PAGE_URL" target="_blank" rel="noreferrer">
             Where to Watch (Official Listing)
           </a>
-          <a class="btn" href="REPLACE_WITH_APPLE_TV_URL" target="_blank" rel="noreferrer">
+          <a class="btn" href="https://tv.apple.com/us/movie/robot--frank/umc.cmc.1tj4b4djocc7gco2s1ta2dazj?action=play" target="_blank" rel="noreferrer">
             Apple TV (Rent/Buy)
           </a>
-          <a class="btn" href="https://tv.apple.com/us/movie/robot--frank/umc.cmc.1tj4b4djocc7gco2s1ta2dazj?action=play" target="_blank" rel="noreferrer">
+          <a class="btn" href="REPLACE WITH PRIME" target="_blank" rel="noreferrer">
             Prime Video (Rent/Buy)
           </a>
           <a class="btn" href="REPLACE_WITH_GOOGLE_PLAY_URL" target="_blank" rel="noreferrer">
