--- a/index.html
+++ b/index.html
@@ -495,12 +495,10 @@
         <div class="filmTop">
           <div>
             <h3>Robot &amp; Frank <span class="meta">(2012)</span></h3>
-            <div class="meta">Rent / buy / stream varies</div>
+            <div class="meta">Watch options</div>
           </div>
         </div>
-        <p class="desc">
-          Availability changes by region. Use the official listing link, or replace with direct storefront URLs.
-        </p>
+       
         <div class="actions">
           <a class="btn primary" href="REPLACE_WITH_OFFICIAL_JUSTWATCH_OR_TITLE_PAGE_URL" target="_blank" rel="noreferrer">
             Where to Watch (Official Listing)
@@ -508,10 +506,10 @@
           <a class="btn" href="https://tv.apple.com/us/movie/robot--frank/umc.cmc.1tj4b4djocc7gco2s1ta2dazj?action=play" target="_blank" rel="noreferrer">
             Apple TV (Rent/Buy)
           </a>
-          <a class="btn" href="REPLACE WITH PRIME" target="_blank" rel="noreferrer">
+          <a class="btn" href="https://www.amazon.com/gp/video/detail/amzn1.dv.gti.48a9f740-9107-7a8e-46b3-9aea91bb5abf?autoplay=0&ref_=atv_cf_strg_wb" target="_blank" rel="noreferrer">
             Prime Video (Rent/Buy)
           </a>
-          <a class="btn" href="REPLACE_WITH_GOOGLE_PLAY_URL" target="_blank" rel="noreferrer">
+          <a class="btn" href="https://play.google.com/store/movies/details?id=WF8n5Qi0Iq8&pli=1" target="_blank" rel="noreferrer">
             Google Play (Rent/Buy)
           </a>
         </div>
