--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 
     <div class="grid">
       <!-- ANGLE -->
-      <article class="card film">
+      <article class="card film" style="grid-column: 1 / -1;">
         <div class="filmTop">
           <div>
             <h3>Angle <span class="meta">(2023)</span></h3>
