--- a/index.html
+++ b/index.html
@@ -501,13 +501,13 @@
        
         <div class="actions">
      
-          <a class="btn" href="https://tv.apple.com/us/movie/robot--frank/umc.cmc.1tj4b4djocc7gco2s1ta2dazj?action=play" target="_blank" rel="noreferrer">
+          <a class="btn primary" href="https://tv.apple.com/us/movie/robot--frank/umc.cmc.1tj4b4djocc7gco2s1ta2dazj?action=play" target="_blank" rel="noreferrer">
             Apple TV (Rent/Buy)
           </a>
-          <a class="btn" href="https://www.amazon.com/gp/video/detail/amzn1.dv.gti.48a9f740-9107-7a8e-46b3-9aea91bb5abf?autoplay=0&ref_=atv_cf_strg_wb" target="_blank" rel="noreferrer">
+          <a class="btn primary" href="https://www.amazon.com/gp/video/detail/amzn1.dv.gti.48a9f740-9107-7a8e-46b3-9aea91bb5abf?autoplay=0&ref_=atv_cf_strg_wb" target="_blank" rel="noreferrer">
             Prime Video (Rent/Buy)
           </a>
-          <a class="btn" href="https://play.google.com/store/movies/details?id=WF8n5Qi0Iq8&pli=1" target="_blank" rel="noreferrer">
+          <a class="btn primary" href="https://play.google.com/store/movies/details?id=WF8n5Qi0Iq8&pli=1" target="_blank" rel="noreferrer">
             Google Play (Rent/Buy)
           </a>
         </div>
