--- a/index.html
+++ b/index.html
@@ -524,13 +524,13 @@
        
         <div class="actions">
         
-          <a class="btn primary" href="REPLACE_WITH_ROKU_CHANNEL_URL_IF_AVAILABLE" target="_blank" rel="noreferrer">
+          <a class="btn primary" href="https://therokuchannel.roku.com/watch/560b45802b385061b49476e2d7e60f59?source=google" target="_blank" rel="noreferrer">
             The Roku Channel
           </a>
-          <a class="btn primary" href="REPLACE_WITH_FREEVEE_OR_AD_SUPPORTED_URL" target="_blank" rel="noreferrer">
-            Watch Free (Ad-Supported)
+          <a class="btn primary" href="https://tubitv.com/movies/334510/arcadia?start=true&tracking=google-feed&utm_source=google-feed" target="_blank" rel="noreferrer">
+            Tubi
           </a>
-          <a class="btn primary" href="REPLACE_WITH_AMAZON_URL" target="_blank" rel="noreferrer">
+          <a class="btn primary" href="https://www.amazon.com/gp/video/detail/amzn1.dv.gti.12a9f721-7d44-8e03-42cf-c0b2ca9a1ce0?autoplay=0&ref_=atv_cf_strg_wb" target="_blank" rel="noreferrer">
             Prime Video (Rent/Buy)
           </a>
         </div>
