--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
         <div class="filmTop">
           <div>
             <h3>Arcadia <span class="meta">(2012)</span></h3>
-            <div class="meta">Stream / rent / buy varies</div>
+            <div class="meta">Watch options</div>
           </div>
         </div>
        
@@ -542,23 +542,21 @@
         <div class="filmTop">
           <div>
             <h3>Someone Marry Barry <span class="meta">(2014)</span></h3>
-            <div class="meta">Rent / buy / stream varies</div>
+            <div class="meta">Watch options</div>
           </div>
         </div>
-        <p class="desc">
-          Replace placeholders with the exact title pages on platforms.
-        </p>
+       
         <div class="actions">
           <a class="btn primary" href="REPLACE_WITH_OFFICIAL_JUSTWATCH_OR_TITLE_PAGE_URL" target="_blank" rel="noreferrer">
             Where to Watch (Official Listing)
           </a>
-          <a class="btn" href="https://tv.apple.com/us/movie/someone-marry-barry/umc.cmc.159czomui4aduybmuc0o8sl0a?action=play" target="_blank" rel="noreferrer">
+          <a class="btn primary" href="https://tv.apple.com/us/movie/someone-marry-barry/umc.cmc.159czomui4aduybmuc0o8sl0a?action=play" target="_blank" rel="noreferrer">
             Apple TV (Rent/Buy)
           </a>
-          <a class="btn" href="https://www.amazon.com/gp/video/detail/amzn1.dv.gti.267eed68-66d5-4978-accb-24afed02c0ff?autoplay=0&ref_=atv_cf_strg_wb" target="_blank" rel="noreferrer">
+          <a class="btn primary" href="https://www.amazon.com/gp/video/detail/amzn1.dv.gti.267eed68-66d5-4978-accb-24afed02c0ff?autoplay=0&ref_=atv_cf_strg_wb" target="_blank" rel="noreferrer">
             Prime Video (Rent/Buy)
           </a>
-          <a class="btn" href="https://www.youtube.com/watch?v=GftG0sjAHas" target="_blank" rel="noreferrer">
+          <a class="btn primary" href="https://www.youtube.com/watch?v=GftG0sjAHas" target="_blank" rel="noreferrer">
             YouTube Movies (Rent/Buy)
           </a>
         </div>
