--- a/index.html
+++ b/index.html
@@ -565,20 +565,15 @@
         <div class="filmTop">
           <div>
             <h3>The New Republic <span class="meta">(2011)</span></h3>
-            <div class="meta">Availability unclear</div>
+            <div class="meta">Watch options</div>
           </div>
         </div>
-        <p class="desc">
-          This title may not currently be available on major platforms. If you find a working platform link,
-          replace the button below.
-        </p>
+      
         <div class="actions">
-          <a class="btn primary" href="REPLACE_WITH_ANY_WORKING_TITLE_PAGE_IF_FOUND" target="_blank" rel="noreferrer">
-            Check Availability
+          <a class="btn primary" href="https://watch.plex.tv/watch/movie/the-new-republic?uri=provider%3A%2F%2Ftv.plex.provider.vod%2Flibrary%2Fmetadata%2F5d776a35fb0d55001f53de85&autoplay=1" target="_blank" rel="noreferrer">
+            Plex
           </a>
-          <a class="btn" href="#contact">
-            Contact for Screenings
-          </a>
+         
         </div>
         <p class="small">
           If unavailable, you can leave it as “Contact for screenings” only.
