--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
   <section id="films" class="section">
     <div class="wrap">
       <h2>Films</h2>
-      <p class="sub">Trailers, awards, and quick links for ratings + details.</p>
+      <p class="sub">Trailers, descriptions, and ratings.</p>
 
       <div class="grid">
         <!-- ANGLE -->
@@ -254,7 +254,7 @@
           <div class="filmTop">
             <div>
               <h3>Angle <span class="meta">(2023)</span></h3>
-              <div class="meta">Documentary • Producer: Jeremy Bailer</div>
+              <div class="meta">Documentary </div>
             </div>
           </div>
           <div class="tagRow">
