--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
     </a>
     <nav class="links" aria-label="Primary">
       <a href="#films">Films</a>
+      <a href="#awards">Awards</a>
       <a href="#watch">Where to Watch</a>
       <a href="#press">Press</a>
       <a href="#presskit">Press Kit</a>
@@ -554,7 +555,24 @@
     </div>
   </div>
 </section>
+<section id="awards" class="section">
+  <div class="wrap">
+    <h2>Awards & Nominations</h2>
+    <p class="sub">Selected honors across Madrose Productions titles.</p>
 
+    <div class="card film">
+      <ul>
+        <li><b>Team Foxcatcher (2016)</b> — Primetime Emmy nominee: <i>Outstanding Historical Documentary</i>.</li>
+        <li><b>Arcadia (2012)</b> — Berlin International Film Festival (Generation 14plus): <i>Crystal Bear — Best Feature Film</i>.</li>
+        <li><b>Robot &amp; Frank (2012)</b> — Sundance Film Festival: <i>Alfred P. Sloan Feature Film Prize</i> (winner).</li>
+      </ul>
+
+      <div class="mutedBox" style="margin-top:12px">
+        Availability of awards lists varies by source. If you want, I can add more items once you confirm them (or send screenshots/links from your press kit PDF).
+      </div>
+    </div>
+  </div>
+</section>
   <section id="press" class="section">
     <div class="wrap">
       <h2>Press & Reviews</h2>
