--- a/index.html
+++ b/index.html
@@ -677,8 +677,8 @@
 
         <div class="actions">
           <a class="btn primary" href="https://clashofdynasties.com/" target="_blank" rel="noreferrer">Official Site</a>
-          <a class="btn" href="https://tv.apple.com/us/episode/building-a-dynasty/umc.cmc.3utdoux39n479v211cf46m9uz?showId=umc.cmc.5hb3t4kxgam9i87yauq93hk83&action=playSmartEpisode" target="_blank" rel="noreferrer">Apple TV</a>
-          <a class="btn" href="https://www.amazon.com/gp/video/detail/amzn1.dv.gti.67096986-fe4f-4c36-8a6a-b2c587d93713?autoplay=0&ref_=atv_cf_strg_wb" target="_blank" rel="noreferrer">Prime</a>
+          <a class="btn primary" href="https://tv.apple.com/us/episode/building-a-dynasty/umc.cmc.3utdoux39n479v211cf46m9uz?showId=umc.cmc.5hb3t4kxgam9i87yauq93hk83&action=playSmartEpisode" target="_blank" rel="noreferrer">Apple TV</a>
+          <a class="btn primary" href="https://www.amazon.com/gp/video/detail/amzn1.dv.gti.67096986-fe4f-4c36-8a6a-b2c587d93713?autoplay=0&ref_=atv_cf_strg_wb" target="_blank" rel="noreferrer">Prime</a>
         </div>
 
        
