--- a/index.html
+++ b/index.html
@@ -674,8 +674,7 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
         </div>
-<div class="meta">Where to Watch</div>
-<div style="height:8px"></div>
+<h2 style="margin:0 0 8px;">Where to Watch</h2>
       <div class="actions">
   <a class="btn primary" href="https://clashofdynasties.com/" target="_blank" rel="noreferrer">
     Official Site
