--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
           <a class="btn primary" href="https://www.rottentomatoes.com/m/team_foxcatcher" target="_blank" rel="noreferrer">
             Rotten Tomatoes (Critics)
           </a>
-          <a class="btn" href="https://www.imdb.com/title/tt5503618/" target="_blank" rel="noreferrer">
+          <a class="btn" href="https://www.imdb.com/title/tt5598216/?ref_=nv_sr_srsg_0_tt_1_nm_0_in_0_q_team%2520foxcatcher" target="_blank" rel="noreferrer">
             IMDb
           </a>
           <a class="btn" href="https://www.netflix.com/title/80044093" target="_blank" rel="noreferrer">
@@ -628,7 +628,7 @@
           <a class="btn" href="https://www.imdb.com/title/tt2101341/" target="_blank" rel="noreferrer">
             IMDb
           </a>
-          <a class="btn" href="https://en.wikipedia.org/wiki/Arcadia_(2012_film)" target="_blank" rel="noreferrer">
+          <a class="btn" href="https://www.imdb.com/title/tt2056520/?ref_=nv_sr_srsg_0_tt_7_nm_1_in_0_q_arcadia%25202012" target="_blank" rel="noreferrer">
             Wikipedia
           </a>
         </div>
