--- a/index.html
+++ b/index.html
@@ -584,6 +584,11 @@
         <h3>Team Foxcatcher (2016)</h3>
         <p class="desc">Critical reception, awards coverage, and press.</p>
         <div class="actions">
+          <p class="desc">Penn Gazette — Team Foxcatcher reflects deep involvement by the Penn wrestling community featuring Jeremy Bailer and Ben Hatta.</p>
+  <div class="actions">
+    <a class="btn primary" href="https://thepenngazette.com/grappling-with-tragedy/" target="_blank" rel="noreferrer">
+      Penn Gazette: Grappling with Tragedy
+    </a>
           <a class="btn primary" href="https://www.rottentomatoes.com/m/team_foxcatcher" target="_blank" rel="noreferrer">
             Rotten Tomatoes (Critics)
           </a>
